# CarND-Capstone

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  190222_StAn_Capstone_Docker_Commands.txt  CARLA.md  Changelog.txt  Dockerfile  Dockerfile-GPU  Dockerfile-gpu  DockerfileGpu  Dockerfile_Pycharm  Makefile  Open Notebook.onetoc2  ProjectPlotter.py  README.md  README.txt  README_Traffic_Lights.md  README_dbw.md  README_waypoint_updater.md  Team.txt  Team_Members.txt  TrafficLightArray  UDACITY.md  base_waypoints.ods  build-docker-image.sh  build_run.sh  capstone-workbook.html  capstone-workbook.org  classnotes.md  curpath.bat  dbw_control.md  dbw_workbook.html  dbw_workbook.org  docker-build.bat  docker-compose.yml  docker-id.bat  docker-run.bat  (+32 more)
Helper_tool/: getcapture.py
TL_Classifier_Udacity/: bottleneck_model.py  bottleneck_model_sim.py  predict_img.py  predict_img_sim.py
Traffic Docs/: Traffic_Light_Classifier.ipynb
Traffic_Light_Detection/: .gitignore  README.md  create_tf_record.py  create_tf_record_csv.py  create_tf_record_yaml.py  model_main.py
Traffic_Light_Detection/config/: label_map.pbtxt  ssd_mobilenet_v1.config  ssd_mobilenet_v1_coco.config
Traffic_Light_Detection/notebooks/: Traffic-Light-Detection-Training.ipynb  Traffic_Light_Detector_TFRecord.ipynb
Traffic_Light_Detection/training/: ssd_mobilenet_v1_coco.config
backup/: requirements.txt
backup/data/: grasshopper_calibration.yml  sim_waypoints.csv  wp_yaw.txt
build-docker-gpu/: Dockerfile  bashrc_udacity  build-docker-image.sh
build-docker-gpu/dbw_mkz/: sdk_install.bash  sdk_update.bash
classifier/: object_detection_tutorial.ipynb  retrain.py  train.sh
data/: Data_Visualization.ipynb  Open Notebook.onetoc2  churchlot_with_cars.csv  maptf.launch  wp_yaw_const.csv  wp_yaw_const.txt
detection/: README.md  export_graph.sh  export_graph_simulator.sh  install-protobuf3.sh  install.sh  prepare_data.sh  quantize_simulator.sh  requirements.txt  setup.bash  test-env.sh  test_simulator.sh  train_simulator.sh
detection/models/: labelmap.pbtxt  (+2 more)
env/: Dockerfile  README.md  build.sh  requirements.txt  run.sh  start.sh
imgs/: Open Notebook.onetoc2
notebooks/: TestUtility.py
prototyping_traffic_light_classifier/: Prototyping_model_traffic_lights.ipynb
python/: aug.py  detection.py  generate_dataset.py  infer.py  model.json  net.py  test_infer.py  tests.py  train.py  utils.py
ros/: '  .gitignore  Open Notebook.onetoc2  execute.sh  howtostop.txt  rebuild.sh  ros-replay.sh  ros-site.sh  ros-styx.sh  run.sh  start-ros.sh  start.sh  tfGpuTest.py
ros/src/dbw_mkz_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/src/dbw_mkz_msgs/bmr/: README.md
ros/src/dbw_mkz_msgs/bmr/1.0.11-1.0.12/: BrakeReport.bmr  BrakeReport.saved  SteeringReport.bmr  SteeringReport.saved  ThrottleReport.bmr  ThrottleReport.saved
ros/src/dbw_mkz_msgs/bmr/1.0.12-1.0.13/: Misc1Report.bmr  Misc1Report.saved
ros/src/dbw_mkz_msgs/bmr/1.0.2-1.0.3/: SteeringCmd.bmr  SteeringCmd.saved
ros/src/dbw_mkz_msgs/bmr/1.0.5-1.0.6/: BrakeCmd.bmr  BrakeCmd.saved  GearCmd.bmr  GearCmd.saved  SteeringCmd.bmr  SteeringCmd.saved  ThrottleCmd.bmr  ThrottleCmd.saved
ros/src/dbw_mkz_msgs/bmr/1.0.6-1.0.7/: BrakeReport.bmr  BrakeReport.saved  GearReport.bmr  GearReport.saved  Misc1Report.bmr  Misc1Report.saved  SteeringReport.bmr  SteeringReport.saved  ThrottleReport.bmr  ThrottleReport.saved
ros/src/dbw_mkz_msgs/msg/: BrakeReport.msg  Misc1Report.msg  SteeringReport.msg  ThrottleReport.msg
ros/src/object_detection_tensorflow/: CMakeLists.txt  package.xml
ros/src/object_detection_tensorflow/data/: traffic_lights.pbtxt
ros/src/object_detection_tensorflow/scripts/: object_detection_tensorflow.py
ros/src/object_detection_tensorflow/scripts/utils/: visualization_utils.py
ros/src/styx_visualization/: CMakeLists.txt  config.rviz  package.xml
ros/src/styx_visualization/launch/: visualization.launch
ros/src/styx_visualization/scripts/: lane_to_marker  traffic_light_to_marker
ros/src/twist_controller/: CMakeLists.txt  Open Notebook.onetoc2  alter_twist_controller.py  brake_controller.py  brakes.csv  constants.py  controller.py  cte.py  cte_calculator.py  dbw_logger.py  dbw_node.py  dbw_test.py  dbw_utils.py  lowpass.py  package.xml  pid.py  setup.py  steers.csv  test_twiddle.py  throttle_controller.py  throttles.csv  twiddle.py  twist_controller.py  twist_controller_logger.py  twist_controller_mod.py  twist_controller_test.py  yaw_controller.py
ros/src/twist_controller/cfg/: DynReconf.cfg  PidGains.cfg
ros/src/twist_controller/launch/: Open Notebook.onetoc2  controller_tuning.launch  dbw.launch  dbw_node.perspective  dbw_sim.launch  dbw_test.launch
ros/src/twist_controller/scripts/: dbw_node
ros/src/twist_controller/src/twist_controller/: pid.py  twist_controller.py
ros/src/twist_controller/test/: twist_controller_test.py
ros/src/waypoint_follower/: CMakeLists.txt  Open Notebook.onetoc2  package.xml
ros/src/waypoint_follower/include/: Open Notebook.onetoc2  libwaypoint_follower.h  pure_pursuit_core.h
ros/src/waypoint_follower/launch/: Open Notebook.onetoc2
ros/src/waypoint_follower/lib/: Open Notebook.onetoc2  libwaypoint_follower.cpp
ros/src/waypoint_follower/src/: Open Notebook.onetoc2  pure_pursuit.cpp  pure_pursuit_core.cpp
scripts/: abspath.bat  docker-build.bat  docker-id.bat  docker-run.bat
tl_model/: DataAugmentation.py  DatasetHandler.py  DatasetToTFRecordConverter.py  README.md  environment.yml  plot_utils.py  tl_model_eval.py
tl_trainner/: inference.py  model.py
tools/: README.md  read_bag_imgs.py
traffic-light/: README.md  config.py  download.py  traffic-light-classifier.ipynb
traffic-light-detection/: README.txt  TL-Classifier.ipynb  colors_only_labels.csv  file_labels.csv  find_valid_paths.py  keras_to_tensorflow.py  label_simulator_files.py  model.h5  predict.py  requirements.txt  train.py
traffic_light_detection_profiles/: faster_rcnn_traffic_bosch.config
traffic_light_training/: README.md
training_data/: .gitignore
util/: steering_perf.py
(+606 files in other folders)
