<?xml version="1.0"?>
<package format="2">
  <name>dbw_mkz_msgs</name>
  <version>1.0.12</version>
  <description>
    Drive-by-wire messages for the Lincoln MKZ
  </description>

  <license>BSD</license>
  <author email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Kevin Hallenbeck</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/dbw_mkz_ros</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/dbw_mkz_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>
    <rosbag_migration_rule rule_file="bmr/1.0.2-1.0.3/SteeringCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/BrakeCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/GearCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/SteeringCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.5-1.0.6/ThrottleCmd.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/BrakeReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/GearReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/Misc1Report.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/SteeringReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.6-1.0.7/ThrottleReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.11-1.0.12/BrakeReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.11-1.0.12/SteeringReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.11-1.0.12/ThrottleReport.bmr"/>
    <rosbag_migration_rule rule_file="bmr/1.0.12-1.0.13/Misc1Report.bmr"/>
  </export>

</package>
