<?xml version="1.0"?>
<package>
  <name>object_detection_tensorflow</name>
  <version>0.0.0</version>
  <description>The traffic light detection package</description>

  <maintainer email="yousuf@todo.todo">yousuf</maintainer>


  <license>GPLv3</license>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
