<?xml version="1.0"?>
<package>
  <name>twist_controller</name>
  <version>0.0.0</version>
  <description>The twist_controller package</description>

  <maintainer email="lukscasanova@gmail.com">Lucas Nogueira</maintainer>
  <maintainer email="evenator@gmail.com">Ed Venator</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dbw_mkz_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
